--- a/frontend/index.html
+++ b/frontend/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="icon" type="image/x-icon" href="/favicon.ico" />
-    <title>CZ conseil / BoundaryAi</title>
+    <title>czconseil / BoundaryAi</title>
   </head>
   <body>
     <div id="root"></div>
